--- a/public/index.html
+++ b/public/index.html
@@ -161,7 +161,7 @@
     </section>
 
     <footer>
-      <p>&copy; 2024 My Portfolio. All rights reserved.</p>
+      <p>&copy; 2024 Jerick Portfolio. All rights reserved.</p>
     </footer>
 
     <script type="module" src="js/main.js"></script>
