with social media link

--- a/public/index.html
+++ b/public/index.html
@@ -153,9 +153,9 @@
           <button type="submit" class="submit-button">Send Message</button>
         </form>
         <div class="social-links">
-          <a href="#"><i class="fab fa-github"></i></a>
-          <a href="#"><i class="fab fa-linkedin"></i></a>
-          <a href="#"><i class="fab fa-twitter"></i></a>
+          <a href="https://github.com/JuanLuther" target="_blank"><i class="fab fa-github"></i></a>
+          <a href="https://www.linkedin.com/in/jerick-dale-mendoza-343b45190/" target="_blank"><i class="fab fa-linkedin"></i></a>
+          <a href="https://www.facebook.com/jerickdalealejandromendoza" target="_blank"><i class="fab fa-facebook"></i></a>
         </div>
       </div>
     </section>
