--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           </div>
         </div>
         <div class="hero-image">
-          <img src="images/profile.jpg" alt="Profile Picture" />
+          <img src="assets/images/profile.jpg" alt="Profile Picture" />
         </div>
       </div>
       <div class="hero-scroll">
@@ -55,7 +55,7 @@
       <h2>About Me</h2>
       <div class="about-content">
         <div class="about-image">
-          <img src="images/about-profile.jpg" alt="About Me" />
+          <img src="assets/images/about-profile.jpg" alt="About Me" />
         </div>
         <div class="about-text">
           <div class="about-intro">
@@ -146,16 +146,26 @@
     <section id="contact" class="contact">
       <h2>Contact Me</h2>
       <div class="contact-content">
-        <form id="contact-form">
+        <form action="https://formspree.io/f/MeVpVzVW" id="contact-form">
           <input type="text" placeholder="Name" required />
           <input type="email" placeholder="Email" required />
           <textarea placeholder="Message" required></textarea>
           <button type="submit" class="submit-button">Send Message</button>
         </form>
         <div class="social-links">
-          <a href="https://github.com/JuanLuther" target="_blank"><i class="fab fa-github"></i></a>
-          <a href="https://www.linkedin.com/in/jerick-dale-mendoza-343b45190/" target="_blank"><i class="fab fa-linkedin"></i></a>
-          <a href="https://www.facebook.com/jerickdalealejandromendoza" target="_blank"><i class="fab fa-facebook"></i></a>
+          <a href="https://github.com/JuanLuther" target="_blank"
+            ><i class="fab fa-github"></i
+          ></a>
+          <a
+            href="https://www.linkedin.com/in/jerick-dale-mendoza-343b45190/"
+            target="_blank"
+            ><i class="fab fa-linkedin"></i
+          ></a>
+          <a
+            href="https://www.facebook.com/jerickdalealejandromendoza"
+            target="_blank"
+            ><i class="fab fa-facebook"></i
+          ></a>
         </div>
       </div>
     </section>
