--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jerick Dale A. Mendoza</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
@@ -174,6 +174,6 @@
       <p>&copy; 2024 Jerick Portfolio. All rights reserved.</p>
     </footer>
 
-    <script type="module" src="./js/main.js"></script>
+    <script type="module" src="./assets/js/main.js"></script>
   </body>
 </html>
