--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <body class="antialiased text-gray-800">
     <!-- Header -->
-    <header class="bg-white shadow-md sticky top-0">
+    <header class="bg-white shadow-md sticky top-0 z-50">
       <nav
         class="container mx-auto flex items-center justify-between py-4 px-6"
       >
@@ -47,13 +47,41 @@
           </li>
         </ul>
 
-        <!-- Hamburger -->
-        <div class="md:hidden flex flex-col space-y-1 cursor-pointer">
+        <!-- Hamburger Button -->
+        <div
+          id="hamburger"
+          class="md:hidden flex flex-col space-y-1 cursor-pointer"
+        >
           <span class="block w-6 h-0.5 bg-gray-800"></span>
           <span class="block w-6 h-0.5 bg-gray-800"></span>
           <span class="block w-6 h-0.5 bg-gray-800"></span>
         </div>
       </nav>
+
+      <!-- Mobile Nav Links -->
+      <ul
+        id="mobile-menu"
+        class="hidden flex-col space-y-4 px-6 pb-6 text-gray-700 font-medium md:hidden bg-white shadow-md"
+      >
+        <li>
+          <a href="#home" class="block hover:text-blue-500 transition">Home</a>
+        </li>
+        <li>
+          <a href="#about" class="block hover:text-blue-500 transition"
+            >About</a
+          >
+        </li>
+        <li>
+          <a href="#projects" class="block hover:text-blue-500 transition"
+            >Projects</a
+          >
+        </li>
+        <li>
+          <a href="#contact" class="block hover:text-blue-500 transition"
+            >Contact</a
+          >
+        </li>
+      </ul>
     </header>
 
     <!-- Hero Section -->
@@ -62,8 +90,18 @@
       class="pt-20 bg-gradient-to-br from-gray-900 to-gray-700 text-white"
     >
       <div
-        class="container mx-auto flex flex-col md:flex-row items-center px-6 md:px-12 mt-8"
+        class="container mx-auto flex flex-col md:flex-row md:flex-row-reverse items-center px-6 md:px-12 md:mt-8 space-y-4"
       >
+        <!-- Hero Image -->
+        <div
+          class="w-full md:w-1/2 flex justify-center md:border-l-2 border-blue-500"
+        >
+          <img
+            src="assets/images/profile2.jpg"
+            alt="Profile Picture"
+            class="w-72 h-72 object-fit rounded-full shadow-lg border-4 border-blue-500"
+          />
+        </div>
         <!-- Hero Text -->
         <div class="w-full md:w-1/2 mb-10 md:mb-0">
           <h1 class="text-4xl md:text-5xl font-bold mb-4">
@@ -91,17 +129,6 @@
               Get in Touch
             </a>
           </div>
-        </div>
-
-        <!-- Hero Image -->
-        <div
-          class="w-full md:w-1/2 flex justify-center border-l-2 border-blue-500"
-        >
-          <img
-            src="assets/images/profile2.jpg"
-            alt="Profile Picture"
-            class="w-72 h-72 object-fit rounded-full shadow-lg border-4 border-blue-500"
-          />
         </div>
       </div>
 
@@ -371,5 +398,15 @@
     <footer class="py-6 bg-gray-900 text-gray-400 text-center">
       <p>&copy; 2024 Jerick Portfolio. All rights reserved.</p>
     </footer>
+    <script>
+      document.addEventListener("DOMContentLoaded", () => {
+        const hamburger = document.getElementById("hamburger");
+        const mobileMenu = document.getElementById("mobile-menu");
+
+        hamburger.addEventListener("click", () => {
+          mobileMenu.classList.toggle("hidden");
+        });
+      });
+    </script>
   </body>
 </html>
