--- a/index.html
+++ b/index.html
@@ -214,7 +214,9 @@
         </div>
 
         <!-- Desktop Nav Links -->
-        <ul class="hidden md:flex space-x-8 text-slate font-medium">
+        <ul
+          class="hidden md:flex space-x-8 text-slate font-medium items-center py-2"
+        >
           <li>
             <a href="#home" class="nav-link hover:text-dark-teal">Home</a>
           </li>
@@ -228,6 +230,15 @@
           </li>
           <li>
             <a href="#contact" class="nav-link hover:text-dark-teal">Contact</a>
+          </li>
+          <li>
+            <a
+              href="https://drive.google.com/file/d/180L8PZz5Eq0fmlWTeSVC-uAKvN8MuBdJ/view?usp=drive_link"
+              target="_blank"
+              class="block btn-primary px-6 py-2 rounded-lg font-semibold text-center border border-slate hover:bg-white hover:text-slate transition-all duration-300"
+            >
+              <i class="fas fa-file-alt mr-2"></i>Resume
+            </a>
           </li>
         </ul>
 
@@ -272,6 +283,15 @@
           <a href="#contact" class="block hover:text-dark-teal transition py-2"
             >Contact</a
           >
+        </li>
+        <li>
+          <a
+            href="https://drive.google.com/file/d/180L8PZz5Eq0fmlWTeSVC-uAKvN8MuBdJ/view?usp=drive_link"
+            target="_blank"
+            class="block btn-secondary px-6 py-2 rounded-lg font-semibold text-center border border-lavender hover:bg-lavender hover:text-white transition-all duration-300"
+          >
+            <i class="fas fa-file-alt mr-2"></i>Resume
+          </a>
         </li>
       </ul>
     </header>
@@ -783,6 +803,10 @@
                 <span>Send Message</span>
               </button>
             </form>
+            <div
+              id="contact-feedback"
+              class="mt-6 text-center text-lg font-semibold text-lavender"
+            ></div>
           </div>
 
           <!-- Social Links -->
@@ -864,11 +888,22 @@
 
         // Form submission feedback
         const form = document.getElementById("contact-form");
+        const feedback = document.getElementById("contact-feedback");
         form.addEventListener("submit", function (e) {
+          e.preventDefault();
           const button = form.querySelector('button[type="submit"]');
           button.innerHTML =
             '<i class="fas fa-spinner fa-spin mr-2"></i>Sending...';
           button.disabled = true;
+
+          // Simulate sending (replace with real API if needed)
+          setTimeout(() => {
+            feedback.textContent =
+              "Thank you for reaching out! I'll get back to you soon.";
+            button.innerHTML = '<i class="fas fa-paper-plane"></i>Send Message';
+            button.disabled = false;
+            form.reset();
+          }, 1800);
         });
       });
     </script>
