--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="shortcut icon"
-      href="assets/images/JDM logo.png"
+      href="assets/images/logo.svg"
       type="image/x-icon"
     />
     <title>Jerick Dale A. Mendoza - Full Stack Developer</title>
@@ -40,7 +40,7 @@
           href="#home"
           class="text-xl font-display font-semibold text-dark-teal flex items-center space-x-3 hover:text-dark-teal transition"
         >
-          <img src="assets/images/JDM logo.png" alt="Logo" class="h-10" />
+          <img src="assets/images/logo.svg" alt="Logo" class="h-10" />
           <p>Jerick Dale A. Mendoza</p>
         </a>
 
