--- a/index.html
+++ b/index.html
@@ -3,11 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="shortcut icon"
-      href="assets/images/logo.svg"
-      type="image/x-icon"
-    />
+    <link rel="shortcut icon" href="images/logo.svg" type="image/x-icon" />
     <title>Jerick Dale A. Mendoza - Full Stack Developer</title>
 
     <!-- Tailwind CDN -->
@@ -26,7 +22,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=Playfair+Display:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
 
   <body class="antialiased text-dark-teal bg-white overflow-x-hidden">
@@ -40,7 +36,7 @@
           href="#home"
           class="text-xl font-display font-semibold text-dark-teal flex items-center space-x-3 hover:text-dark-teal transition"
         >
-          <img src="assets/images/logo.svg" alt="Logo" class="h-10" />
+          <img src="images/logo.svg" alt="Logo" class="h-10" />
           <p>Jerick Dale A. Mendoza</p>
         </a>
 
@@ -185,7 +181,7 @@
               class="w-80 h-80 lg:w-96 lg:h-96 rounded-full overflow-hidden card-shadow border-4 border-white"
             >
               <img
-                src="assets/images/profile2.jpg"
+                src="images/profile2.jpg"
                 alt="Profile Picture"
                 class="w-full h-full object-cover"
               />
@@ -224,7 +220,7 @@
             <div class="relative">
               <div class="aspect-[4/5] rounded-2xl overflow-hidden card-shadow">
                 <img
-                  src="assets/images/about-profile.jpg"
+                  src="images/about-profile.jpg"
                   alt="About Me"
                   class="w-full h-full object-cover"
                 />
@@ -431,7 +427,7 @@
             >
               <div class="relative overflow-hidden">
                 <img
-                  src="assets/images/portfolio.jpg"
+                  src="images/portfolio.jpg"
                   alt="Eisenhower Task Prioritizer"
                   loading="lazy"
                   class="w-full h-64 object-cover transition-transform duration-500 group-hover:scale-105"
@@ -491,7 +487,7 @@
             >
               <div class="relative overflow-hidden">
                 <img
-                  src="assets/images/hero-image.jpg"
+                  src="images/hero-image.jpg"
                   alt="Architecture Website"
                   loading="lazy"
                   class="w-full h-64 object-cover transition-transform duration-500 group-hover:scale-105"
