--- a/index.html
+++ b/index.html
@@ -3,11 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="shortcut icon"
-      href="images/logo.svg"
-      type="image/x-icon"
-    />
+    <link rel="shortcut icon" href="images/logo.svg" type="image/x-icon" />
     <title>Jerick Dale A. Mendoza - Full Stack Developer</title>
 
     <!-- Tailwind CDN -->
@@ -420,132 +416,10 @@
           </p>
         </div>
 
-        <div class="grid grid-cols-1 lg:grid-cols-2 gap-8 max-w-5xl mx-auto">
-          <!-- Project Card 1 -->
-          <div
-            class="group cursor-pointer"
-            onclick="window.open('https://task-prioritizer-nu.vercel.app/', '_blank')"
-          >
-            <div
-              class="bg-white rounded-2xl card-shadow card-hover overflow-hidden border border-gray-100"
-            >
-              <div class="relative overflow-hidden">
-                <img
-                  src="images/portfolio.jpg"
-                  alt="Eisenhower Task Prioritizer"
-                  loading="lazy"
-                  class="w-full h-64 object-cover transition-transform duration-500 group-hover:scale-105"
-                />
-                <div
-                  class="absolute inset-0 bg-dark-teal/0 group-hover:bg-dark-teal/10 transition-all duration-300"
-                ></div>
-                <div
-                  class="absolute top-4 right-4 w-10 h-10 bg-white rounded-full flex items-center justify-center opacity-0 group-hover:opacity-100 transition-all duration-300 shadow-lg"
-                >
-                  <i class="fas fa-external-link-alt text-slate text-sm"></i>
-                </div>
-              </div>
-              <div class="p-8">
-                <h3
-                  class="font-display text-2xl font-semibold mb-3 text-dark-teal group-hover:text-slate transition-colors"
-                >
-                  Eisenhower Task Prioritizer
-                </h3>
-                <p class="text-slate mb-6 leading-relaxed">
-                  A single-page app to organize, prioritize, and manage daily
-                  tasks efficiently using the Eisenhower Matrix methodology.
-                </p>
-                <div class="flex flex-wrap gap-2 mb-6">
-                  <span
-                    class="skill-tag px-3 py-1 rounded-full text-xs font-medium"
-                    >HTML5</span
-                  >
-                  <span
-                    class="skill-tag px-3 py-1 rounded-full text-xs font-medium"
-                    >CSS3</span
-                  >
-                  <span
-                    class="skill-tag px-3 py-1 rounded-full text-xs font-medium"
-                    >JavaScript</span
-                  >
-                </div>
-                <div
-                  class="flex items-center text-slate font-semibold group-hover:text-dark-teal transition-colors"
-                >
-                  <span class="mr-2">View Project</span>
-                  <i
-                    class="fas fa-arrow-right transition-transform group-hover:translate-x-1"
-                  ></i>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <!-- Project Card 2 -->
-          <div
-            class="group cursor-pointer"
-            onclick="window.open('https://ae-architect.vercel.app/', '_blank')"
-          >
-            <div
-              class="bg-white rounded-2xl card-shadow card-hover overflow-hidden border border-gray-100"
-            >
-              <div class="relative overflow-hidden">
-                <img
-                  src="images/hero-image.jpg"
-                  alt="Architecture Website"
-                  loading="lazy"
-                  class="w-full h-64 object-cover transition-transform duration-500 group-hover:scale-105"
-                />
-                <div
-                  class="absolute inset-0 bg-dark-teal/0 group-hover:bg-dark-teal/10 transition-all duration-300"
-                ></div>
-                <div
-                  class="absolute top-4 right-4 w-10 h-10 bg-white rounded-full flex items-center justify-center opacity-0 group-hover:opacity-100 transition-all duration-300 shadow-lg"
-                >
-                  <i class="fas fa-external-link-alt text-slate text-sm"></i>
-                </div>
-              </div>
-              <div class="p-8">
-                <h3
-                  class="font-display text-2xl font-semibold mb-3 text-dark-teal group-hover:text-slate transition-colors"
-                >
-                  Architecture Website
-                </h3>
-                <p class="text-slate mb-6 leading-relaxed">
-                  A modern architecture website showcasing innovative designs,
-                  project portfolios, and industry insights with responsive
-                  design.
-                </p>
-                <div class="flex flex-wrap gap-2 mb-6">
-                  <span
-                    class="skill-tag px-3 py-1 rounded-full text-xs font-medium"
-                    >Tailwind CSS</span
-                  >
-                  <span
-                    class="skill-tag px-3 py-1 rounded-full text-xs font-medium"
-                    >Next.js</span
-                  >
-                  <span
-                    class="skill-tag px-3 py-1 rounded-full text-xs font-medium"
-                    >TypeScript</span
-                  >
-                  <span
-                    class="skill-tag px-3 py-1 rounded-full text-xs font-medium"
-                    >Node.js</span
-                  >
-                </div>
-                <div
-                  class="flex items-center text-slate font-semibold group-hover:text-dark-teal transition-colors"
-                >
-                  <span class="mr-2">View Project</span>
-                  <i
-                    class="fas fa-arrow-right transition-transform group-hover:translate-x-1"
-                  ></i>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
+        <div
+          id="projects-grid"
+          class="grid grid-cols-1 lg:grid-cols-2 gap-8 max-w-5xl mx-auto"
+        ></div>
       </div>
     </section>
 
@@ -683,61 +557,6 @@
     </footer>
 
     <!-- JavaScript for interactivity -->
-    <script>
-      document.addEventListener("DOMContentLoaded", () => {
-        const hamburger = document.getElementById("hamburger");
-        const mobileMenu = document.getElementById("mobile-menu");
-
-        hamburger.addEventListener("click", () => {
-          mobileMenu.classList.toggle("hidden");
-        });
-
-        // Smooth scrolling for navigation links
-        document.querySelectorAll('a[href^="#"]').forEach((anchor) => {
-          anchor.addEventListener("click", function (e) {
-            e.preventDefault();
-            const target = document.querySelector(this.getAttribute("href"));
-            if (target) {
-              target.scrollIntoView({
-                behavior: "smooth",
-                block: "start",
-              });
-              // Close mobile menu if open
-              mobileMenu.classList.add("hidden");
-            }
-          });
-        });
-
-        // Add scroll effect to navbar
-        window.addEventListener("scroll", () => {
-          const header = document.querySelector("header");
-          if (window.scrollY > 100) {
-            header.classList.add("shadow-lg");
-          } else {
-            header.classList.remove("shadow-lg");
-          }
-        });
-
-        // Form submission feedback
-        const form = document.getElementById("contact-form");
-        const feedback = document.getElementById("contact-feedback");
-        form.addEventListener("submit", function (e) {
-          e.preventDefault();
-          const button = form.querySelector('button[type="submit"]');
-          button.innerHTML =
-            '<i class="fas fa-spinner fa-spin mr-2"></i>Sending...';
-          button.disabled = true;
-
-          // Simulate sending (replace with real API if needed)
-          setTimeout(() => {
-            feedback.textContent =
-              "Thank you for reaching out! I'll get back to you soon.";
-            button.innerHTML = '<i class="fas fa-paper-plane"></i>Send Message';
-            button.disabled = false;
-            form.reset();
-          }, 1800);
-        });
-      });
-    </script>
+    <script type="module" src="main.js"></script>
   </body>
 </html>
