--- a/index.html
+++ b/index.html
@@ -557,6 +557,6 @@
     </footer>
 
     <!-- JavaScript for interactivity -->
-    <script type="module" src="js/main.js"></script>
+    <script type="module" src="main.js"></script>
   </body>
 </html>
