--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           </li>
           <li>
             <a
-              href="https://drive.google.com/file/d/180L8PZz5Eq0fmlWTeSVC-uAKvN8MuBdJ/view?usp=drive_link"
+              href="documents/Jerick Dale Mendoza-Full Stack Developer.pdf"
               target="_blank"
               class="block btn-primary px-6 py-2 rounded-lg font-semibold text-center border border-slate hover:bg-white hover:text-slate transition-all duration-300"
             >
@@ -267,6 +267,10 @@
                 </p>
                 <p class="text-gray-500 flex items-center">
                   <i class="fas fa-calendar-alt mr-2"></i>2012 - 2024
+                </p>
+                <p class="mt-4 text-slate leading-relaxed italic text-sm">
+                  Extended timeline was leveraged to gain significant practical
+                  experience and focus on independent project development.
                 </p>
               </div>
             </div>
