--- a/index.html
+++ b/index.html
@@ -26,5 +26,5 @@
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
-  <script src="main.js"></script>
+  <!-- <script src="main.js"></script> -->
 </html>
