--- a/index.html
+++ b/index.html
@@ -4,7 +4,21 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Jerick Dale A. Mendoza - Full Stack Developer</title>
+    <meta property="description" content="Search engine description" />
+    <title>Jerick Dale A. Mendoza | Full Stack Developer</title>
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta
+      property="twitter:title"
+      content="Jerick Mendoza - Full Stack Developer"
+    />
+    <meta
+      property="twitter:description"
+      content="Check out my projects and skills in modern web development using React, Node.js, and more."
+    />
+    <!-- <meta
+      property="twitter:image"
+      content="https://www.yourwebsite.com/images/share-preview.jpg"
+    /> -->
     <!-- Tailwind CDN -->
     <!-- <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script> -->
 
