--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       rel="stylesheet"
     />
   </head>
-  <body class="antialiased text-dark-teal bg-white overflow-x-hidden">
+  <body class="antialiased overflow-x-hidden" data-theme="sunset">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
